test/asm/bank.err
ERROR: bank.asm(14) -> bank.asm::def_sect(8):
    Section "ROMX_bad"'s bank is not known yet
ERROR: bank.asm(16) -> bank.asm::def_sect(8):
    Section "VRAM_bad"'s bank is not known yet
ERROR: bank.asm(18) -> bank.asm::def_sect(8):
    Section "SRAM_bad"'s bank is not known yet
ERROR: bank.asm(21) -> bank.asm::def_sect(8):
    Section "WRAMX_bad"'s bank is not known yet
error: Assembly aborted (4 errors)!
